[ELVEN] - Final Work

--- a/ansible/roles/wordpress/templates/wp-config.php.j2
+++ b/ansible/roles/wordpress/templates/wp-config.php.j2
@@ -33,7 +33,7 @@ define( 'DB_NAME', 'wordpress' );
 define( 'DB_USER', 'wpuser' );
 
 /** Database password (Altere em caso de producao)*/
-define( 'DB_PASSWORD', 'Wp@12345' );
+define( 'DB_PASSWORD', 'Wp-13579' );
 
 /** Database hostname */
 define( 'DB_HOST', '<endpoint_banco>' );
